Graalvm native executable (#1)
- configured graalvm community to output a single executable to lose the java dependency for the WHERE THE F IS THE .EXE FILE crowd.
- windows build has an extra launcher included because the default windows terminal settings do not allow for the unicode symbols needed for Mordant. The launcher opens wt.exe maximized and focused (no title bar), sets the appropriate code page and runs abrechnung.exe.
- end-to-end tested on windows and linux. 
- judging by the amount of tinkering that had to be done to make it work on win and linux, it will likely not work on macos without more work.
- rewrote the print logic to fix a bug (that was apparent on native build).
- deleted all the unused fonts.
- made a simple logo (png and xcf) using the abrechnung output (figlet + purple color + dollar sign)
- .ico file for windows shortcut
- changed the program to create the output folder for invoices if missing

PS: the opening screen now just says initializing... instead of the fancy animated panel. this had to be done because of some crazy issues with debug messages flooding into stdout in the native build. we redirect stdout and stderr to files in the initializing timeframe, and return stdout to abrechnung when main menu is ready. might want to have some automatic cleanup of these log files.

PPS: we are including a bunch of loose .so/.dll files with the native build. removing these has no effect on my machine, so I am not sure they are needed. keeping them in for now.